--- a/CYBER ONI RGB Lamp/index.html
+++ b/CYBER ONI RGB Lamp/index.html
@@ -24,11 +24,11 @@
 
 
 <!-- MAIN (center) -->
-<main class="tri-main" id="main" aria-label="Main content">
-<section class="tri-stage" aria-label="Hero / workspace">
-<div class="tri-stage-fill" aria-hidden="true"></div>
-</section>
-</main>
+<main class="stage">
+    <figure class="card">
+      <img src="demo.jpg" alt="photo" />
+    </figure>
+  </main>
 
 
 <!-- INFORMATION (right) -->
