--- a/CYBER ONI RGB Lamp/lo.html
+++ b/CYBER ONI RGB Lamp/lo.html
@@ -2,15 +2,26 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
-  <title>Folder Clip Card</title>
+  <title>Responsive clip-path + 3D</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
   <main class="stage">
-    <figure class="card">
-      <img src="demo.jpg" alt="photo" />
-    </figure>
+    <div class="box">
+      <div class="frame">
+        <div class="shape">
+          <model-viewer class="viewer"
+            src="model.glb" camera-controls auto-rotate autoplay
+            exposure="1.1" shadow-intensity="1"></model-viewer>
+        </div>
+        <div class="ui">
+          <button class="btn">Кнопка</button>
+        </div>
+      </div>
+    </div>
   </main>
+  <script src="app.js"></script>
 </body>
 </html>
