--- a/CYBER ONI RGB Lamp/index.html
+++ b/CYBER ONI RGB Lamp/index.html
@@ -1,14 +1,94 @@
 <!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>CYBER‑ONI RGB Lamp — Neon Sculpture Light</title>
+<meta name="description" content="CYBER‑ONI RGB Lamp: a premium neon‑style light with full color control, glassy glow, and tactile‑digital aesthetics." />
+<link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+<link rel="manifest" href="/site.webmanifest" />
+<meta name="theme-color" content="#6e32ff" />
+<link rel="preload" href="assets/img/cyber-oni.png" as="image" />
+<link rel="stylesheet" href="assets/css/main.css" />
+
+
+<!-- Open Graph / Twitter -->
+<meta property="og:type" content="product" />
+<meta property="og:title" content="CYBER‑ONI RGB Lamp" />
+<meta property="og:description" content="A premium RGB lamp with neon glow." />
+<meta property="og:image" content="assets/img/cyber-oni.png" />
+<meta name="twitter:card" content="summary_large_image" />
+
+
+<!-- Schema.org Product -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org/",
+"@type": "Product",
+"name": "CYBER‑ONI RGB Lamp",
+"image": ["assets/img/cyber-oni.png"],
+"description": "Premium RGB lamp with neon glow and color control.",
+"brand": {"@type": "Brand", "name": "CYBER‑ONI"},
+"offers": {
+"@type": "Offer",
+"priceCurrency": "USD",
+"price": "129.00",
+"availability": "https://schema.org/InStock"
+}
+}
+</script>
+</head>
+<body>
+<header class="nav">
+<a class="brand" href="#home" aria-label="CYBER‑ONI home">
+<img src="assets/img/logo.svg" alt="CYBER‑ONI logo" class="logo" />
+<span>CYBER‑ONI</span>
+</a>
+<nav class="menu" aria-label="Main menu">
+<a href="#features">Features</a>
+<a href="#configurator">Color</a>
+<a href="#gallery">Gallery</a>
+<a href="#specs">Specs</a>
+<a href="#faq">FAQ</a>
+</nav>
+<a class="btn primary" href="#buy">Buy</a>
+</header>
+
+
+<main id="home" class="hero" tabindex="-1">
+<div class="bg-blur"></div>
+<section class="hero-content">
+<h1><span class="accent">CYBER‑ONI</span> RGB Lamp</h1>
+<p class="lead">A night sculpture from the near future. Neon glow, glassy highlights, precise color control.</p>
+<div class="cta">
+<a class="btn primary" href="#buy">Buy now</a>
+<a class="btn ghost" href="#gallery">See gallery</a>
 </div>
-<div class="cfg-preview">
-<div class="lamp-silhouette">
-<img src="assets/img/cyber-oni.png" alt="CYBER‑ONI preview" />
-<div class="lamp-glow"></div>
-</div>
+<div class="badges">
+<span>RGB • 16.7M colors</span>
+<span>USB‑C</span>
+<span>Tactile finish</span>
 </div>
 </section>
+<figure class="hero-art" aria-label="Lamp image">
+<img src="assets/img/cyber-oni.png" alt="CYBER‑ONI RGB Lamp" width="900" height="900" />
+<div class="glow" aria-hidden="true"></div>
+</figure>
+</main>
 
 
+<section id="features" class="section features">
+<h2>Features</h2>
+<ul class="grid cards">
+<li>
+<h3>Neon Core</h3>
+<p>Stable, flicker‑free glow. Adjustable intensity.</p>
+</li>
+<li>
+<h3>Deep Black</h3>
+<p>High‑gloss coating with soft reflections for a wet‑look shine.</p>
+</li>
+<li>
 <section id="gallery" class="section gallery">
 <h2>Gallery</h2>
 <div class="grid gallery-grid">
