--- a/CYBER ONI RGB Lamp/index.html
+++ b/CYBER ONI RGB Lamp/index.html
@@ -73,7 +73,7 @@
 </div>
 </section>
 <figure class="hero-art" aria-label="Lamp image">
-<img src="assets/img/cyber-oni.png" alt="CYBER‑ONI RGB Lamp" width="900" height="900" />
+<img src="assets/img/cyber-oni1.png" alt="CYBER‑ONI RGB Lamp" width="900" height="900" />
 <div class="glow" aria-hidden="true"></div>
 </figure>
 </main>
